2008-05-16  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompile.c: fix crash with tcl_traceExec. Found and
	fixed by Alexander Pasadyn [Bug 1964803]. 

2008-05-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclCompCmds.c (TclCompileDictAppendCmd): Fix silly
	off-by-one error that caused a crash every time a compiled 'dict
	append' with more than one value argument was used. Found by Colin
	McCormack.

2008-04-26  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclAsync.c: Tcl_AsyncDelete(): panic if attempt to locate
	handler token fails. Happens when some other thread attempts to delete
	somebody else's token.

	Also, panic early if we find out the wrong thread attempting to delete
	the async handler (common trap). As, only the one that created the
	handler is allowed to delete it.

2008-04-24  Andreas Kupries  <andreask@activestate.com>

	* tests/ioCmd.test: Extended testsuite for reflected channel
	implementation. Added test cases about how it handles if the rug is
	pulled out from under a channel (= killing threads, interpreters
	containing the tcl command for a channel, and channel sitting in a
	different interpreter/thread.)

	* generic/tclIORChan.c: Fixed the bugs exposed by the new testcases,
	redone most of the cleanup and exit handling.

2008-04-15  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied another patch by Alexandre
	* io.test (io-53.8a): Ferrieux <ferrieux@users.sourceforge.net>,
	* chanio.test (chan-io-53.8a): to shift EOF handling to the async
	part of the command if a callback is specified, should the channel
	be at EOF already when fcopy is called. Testcase by myself.

2008-04-14  Kevin B. Kenny <kennykb@acm.org>

	* unix/tclUnixTime.c (NativeGetTime): Removed obsolete use of
	'struct timezone' in the call to 'gettimeofday'. [Bug 1942197].
	* tests/clock.test (clock-33.5, clock-33.5a, clock-33.8, clock-33.8a):